# tachi

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  PHASE_1_TASKS.md  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  publish-pypi.yml  publish-testpypi.yml
docs/: README.md  build-docs.sh
docs/tachi-site/: docusaurus.config.ts  package-lock.json  package.json
docs/tachi-site/docs/: commands.md  configuration.md  deployment-strategies.md  developer-guide.md  examples.md  intro.md  quickstart.md  troubleshooting.md
docs/tachi-site/src/css/: ConstructionBanner.module.css  custom.css
examples/: README.md  high-traffic-app.yaml  internal-tools.yaml  microservices-staging.yaml  simple-web-app.yaml  tag-based-release.yaml
src/tachi/: __init__.py  azure_generator.py  cli.py  config.py  validator.py
src/tachi/templates/azure/: dev-deploy.yaml.j2  pr-cleanup.yaml.j2  pr-deploy.yaml.j2  prod-deploy.yaml.j2  stage-deploy.yaml.j2
src/tachi/templates/azure/container-apps/: app.yaml.j2
tests/: __init__.py  test_cli.py  test_config.py  test_generator.py
