[project]
name = "tachi"
version = "0.1.0"
description = "GitHub Actions CI/CD generator"
authors = [{ name = "Seth Steen-Fuentes", email = "seth@steenfuentes.dev" }]
requires-python = ">=3.12"
dependencies = ["click>=8.2.1", "jinja2>=3.1.6", "pyyaml>=6.0.2"]

[project.scripts]
tachi = "tachi.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]
